--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
     <title>Login</title>
 </head>
 <body>
-    <div class="container col-4 mt-5">
+    <div class="container col-4 mt-5 border">
       <div class="container-fluid">
           <form id="loginForm">
            
             <div class="mb-3">
               <label class="form-label">Usuario</label>
-              <input type="text" class="form-control" placeholder="Usuario">
+              <input id="username"  type="text" class="form-control" placeholder="Usuario">
             </div>
             
             <div class="mb-3">
               <label class="form-label">Contraseña</label>
-              <input type="password" class="form-control" placeholder="Contraseña">
+              <input id="password" type="password" class="form-control" placeholder="Contraseña">
             </div>
 
-            <button class="btn btn-outline-primary btn-sm mb-2" type="button">Iniciar Sesion</button>
+            <p id="errorMessage" class="invisible">Error de usuario y contraseña</p>
+            <button onclick="login()" class="btn btn-outline-primary btn-sm mb-2" type="button">Iniciar Sesion</button>
           </form>
       </div>
     </div>
