--- a/pages/home.html
+++ b/pages/home.html
@@ -16,13 +16,38 @@
     <div class="container col-4 mt-5 border">
       <div class="container-fluid mt-5">
 
-        <span>Coloque el nombre</label>
-        <input id="name" type="text" class="validate mb-3 form-control">
+        <form id="taskForm">
+
+          <div class="mb-3">
+            <label class="form-label">Titulo</label>
+            <input name="form" id="title"  type="text" class="form-control" placeholder="Titulo">
+          </div>
+          
+          <div class="mb-3">
+            <label class="form-label">Descripción</label>
+            <input name="form" id="description" type="text" class="form-control" placeholder="Descripción">
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label">Fecha de Finalización</label>
+            <input name="form" id="date" type="date" class="form-control" placeholder="Fecha de Finalización">
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label">Marca de Progreso</label>
+            <select name="form" class="form-control" name="marca" id="marca" title="marca">
+              <option value="Null">Seleccione..</option>
+              <option value="Programada">Programada</option>
+              <option value="En Proceso">En Proceso</option>
+              <option value="Finalizada">Finalizada</option>
+              <option value="Tardia">Tardia</option>
+            </select>
+          </div>
+
+        </form>
+        
         <p id="errorMessage" class="invisible">Debes colocar el nombre de la tarea</p>
         <button id="button" class="btn btn-outline-primary form-control" type="button" onclick="insertTask()">Agregar Tarea</button>
-        <br><br>
-        <div id="list"></div>
-
       </div>
 
       <br><br>
